--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -357,3 +357,14 @@ In each of these expressions we have a fraction for which both the numerator and
     $$
 
 \end{proof}
+
+
+\begin{theorem}
+    \label{the:efficient_H_diag}
+
+    This diagonal of the matrices $\HH$ and $\HH^2$ can be efficiently calculated. 
+\end{theorem}
+
+\begin{proof}
+    Hi 
+\end{proof}
