--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -68,6 +68,19 @@
  year = {2018}
 }
 
+@article{Bekas2007,
+ author = {Bekas, C. and Kokiopoulou, E. and Saad, Y.},
+ doi = {https://doi.org/10.1016/j.apnum.2007.01.003},
+ issn = {0168-9274},
+ journal = {Applied Numerical Mathematics},
+ number = {11},
+ pages = {1214-1229},
+ title = {An estimator for the diagonal of a matrix},
+ url = {https://doi.org/https://doi.org/10.1016/j.apnum.2007.01.003},
+ volume = {57},
+ year = {2007}
+}
+
 @book{Bhatia1997,
  address = {New York},
  author = {Bhatia, Rajendra},
@@ -207,6 +220,16 @@ and Li, Xuelong},
  year = {1973}
 }
 
+@book{Fletcher2013,
+ author = {Fletcher, R.},
+ doi = {10.1002/9781118723203},
+ isbn = {9781118723180},
+ publisher = {Wiley},
+ title = {Practical Methods of Optimization},
+ url = {https://doi.org/10.1002/9781118723203},
+ year = {2013}
+}
+
 @article{Granata1992,
  author = {Granata, John and Conner, Michael and Tolimieri, Richard},
  doi = {10.1109/78.175736},
@@ -267,6 +290,20 @@ Travis E. Oliphant},
  year = {2020}
 }
 
+@article{Hartigan1979,
+ author = {Hartigan, J. A. and Wong, M. A.},
+ issn = {00359254, 14679876},
+ journal = {Journal of the Royal Statistical Society. Series C (Applied Statistics)},
+ number = {1},
+ pages = {100--108},
+ publisher = {Wiley, Royal Statistical Society},
+ title = {Algorithm AS 136: A K-Means Clustering Algorithm},
+ url = {http://www.jstor.org/stable/2346830},
+ urldate = {2023-05-26},
+ volume = {28},
+ year = {1979}
+}
+
 @incollection{Harzheim2005,
  address = {New York},
  author = {Harzheim, Egbert},
@@ -292,6 +329,20 @@ Travis E. Oliphant},
  url = {https://doi.org/10.6028/JRES.049.044},
  volume = {49},
  year = {1952}
+}
+
+@article{Hutchinson1990,
+ author = {   Hutchinson, M.F.    },
+ doi = {10.1080/03610919008812866},
+ eprint = {https://doi.org/10.1080/03610919008812866},
+ journal = {Communications in Statistics - Simulation and Computation},
+ number = {2},
+ pages = {433-450},
+ publisher = {Taylor & Francis},
+ title = {A stochastic estimator of the trace of the influence matrix for laplacian smoothing splines},
+ url = {https://doi.org/10.1080/03610919008812866},
+ volume = {19},
+ year = {1990}
 }
 
 @book{Imrich2000,
@@ -372,9 +423,7 @@ Travis E. Oliphant},
  doi = {10.1137/07070111X},
  eprint = { 
 
-https://doi.org/10.1137/07070111X
-
-},
+https://doi.org/10.1137/07070111X},
  journal = {SIAM Review},
  number = {3},
  pages = {455-500},
@@ -473,6 +522,15 @@ https://doi.org/10.1137/07070111X
  year = {2016}
 }
 
+@inproceedings{MacQueen1967,
+ author = {MacQueen, J},
+ booktitle = {5th Berkeley Symp. Math. Statist. Probability},
+ organization = {University of California Los Angeles LA USA},
+ pages = {281--297},
+ title = {Classification and analysis of multivariate observations},
+ year = {1967}
+}
+
 @article{Makhoul1980,
  author = {Makhoul, J.},
  doi = {10.1109/TASSP.1980.1163351},
@@ -518,6 +576,18 @@ https://doi.org/10.1137/07070111X
  year = {2018}
 }
 
+@article{Orieux2012,
+ author = {Orieux, F. and Feron, O. and Giovannelli, J.-F.},
+ doi = {10.1109/LSP.2012.2189104},
+ journal = {IEEE Signal Processing Letters},
+ number = {5},
+ pages = {251-254},
+ title = {Sampling High-Dimensional Gaussian Distributions for General Linear Inverse Problems},
+ url = {https://doi.org/10.1109/LSP.2012.2189104},
+ volume = {19},
+ year = {2012}
+}
+
 @article{Ortega2018,
  author = {Ortega, Antonio and Frossard, Pascal and Kovačević, Jelena and Moura, José M. F. and Vandergheynst, Pierre},
  doi = {10.1109/JPROC.2018.2820126},
@@ -528,6 +598,18 @@ https://doi.org/10.1137/07070111X
  url = {https://doi.org/10.1109/JPROC.2018.2820126},
  volume = {106},
  year = {2018}
+}
+
+@inproceedings{Papandreou2010,
+ author = {Papandreou, George and Yuille, Alan L},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {J. Lafferty and C. Williams and J. Shawe-Taylor and R. Zemel and A. Culotta},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Gaussian sampling by local perturbations},
+ url = {https://proceedings.neurips.cc/paper/2010/file/d09bf41544a3365a46c9077ebb5e35c3-Paper.pdf},
+ volume = {23},
+ year = {2010}
 }
 
 @article{Pereyra1973,
@@ -690,6 +772,19 @@ https://doi.org/10.1137/07070111X
  year = {2007}
 }
 
+@article{Tang2012,
+ author = {Tang, Jok M. and Saad, Yousef},
+ doi = {https://doi.org/10.1002/nla.779},
+ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nla.779},
+ journal = {Numerical Linear Algebra with Applications},
+ number = {3},
+ pages = {485-501},
+ title = {A probing method for computing the diagonal of a matrix inverse},
+ url = {https://doi.org/https://doi.org/10.1002/nla.779},
+ volume = {19},
+ year = {2012}
+}
+
 @book{Tolimieri2013,
  address = {New York, NY},
  author = {Tolimieri, Richard and An, Myoung and Lu, Chao},
@@ -725,6 +820,18 @@ https://doi.org/10.1137/07070111X
  url = {https://doi.org/10.1109/ICASSP40776.2020.9053859},
  volume = {},
  year = {2020}
+}
+
+@article{Vono2022,
+ author = {Vono, Maxime and Dobigeon, Nicolas and Chainais, Pierre},
+ doi = {10.1137/20M1371026},
+ journal = {SIAM Review},
+ number = {1},
+ pages = {3-56},
+ title = {High-Dimensional Gaussian Sampling: A Review and a Unifying Approach Based on a Stochastic Proximal Point Algorithm},
+ url = {https://doi.org/10.1137/20M1371026},
+ volume = {64},
+ year = {2022}
 }
 
 @inproceedings{Zhang2018,
