--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -92,6 +92,19 @@
  year = {1997}
 }
 
+@article{Box1958,
+ author = {Box, G. E. P. and Muller, Mervin E.},
+ doi = {10.1214/aoms/1177706645},
+ journal = {The Annals of Mathematical Statistics},
+ number = {2},
+ pages = {610 -- 611},
+ publisher = {Institute of Mathematical Statistics},
+ title = {{A Note on the Generation of Random Normal Deviates}},
+ url = {https://doi.org/10.1214/aoms/1177706645},
+ volume = {29},
+ year = {1958}
+}
+
 @book{Brenner2008,
  author = {Brenner, Susanne C and Scott, L Ridgway and Scott, L Ridgway},
  publisher = {Springer},
@@ -329,6 +342,17 @@ Travis E. Oliphant},
  url = {https://doi.org/10.6028/JRES.049.044},
  volume = {49},
  year = {1952}
+}
+
+@book{Horn2012,
+ author = {Horn, Roger A. and Johnson, Charles R.},
+ doi = {10.1017/CBO9781139020411},
+ edition = {2},
+ place = {Cambridge},
+ publisher = {Cambridge University Press},
+ title = {Matrix Analysis},
+ url = {https://doi.org/10.1017/CBO9781139020411},
+ year = {2012}
 }
 
 @article{Hutchinson1990,
@@ -663,6 +687,18 @@ https://doi.org/10.1137/07070111X},
  title = {Manifolds, Tensors, and Forms: An Introduction for Mathematicians and Physicists},
  url = {https://books.google.co.uk/books?id=uJWGAgAAQBAJ},
  year = {2013}
+}
+
+@book{Robert1999,
+ author = {Robert, C.P. and Casella, G.},
+ doi = {10.1198/tech.2005.s272},
+ isbn = {9780387987071},
+ lccn = {98055413},
+ publisher = {Springer},
+ series = {Springer texts in statistics},
+ title = {Monte Carlo Statistical Methods},
+ url = {https://doi.org/10.1198/tech.2005.s272},
+ year = {1999}
 }
 
 @article{Roth1934,
