--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -61,6 +61,7 @@
 
 
 \newcommand{\y}{\mathbf{y}}
+\newcommand{\aaa}{\mathbf{a}}
 \newcommand{\cc}{\mathbf{c}}
 \newcommand{\w}{\mathbf{w}}
 \newcommand{\bb}{\mathbf{b}}
@@ -76,7 +77,7 @@
 \newcommand{\ve}{\mathbf{v}}
 \newcommand{\uu}{\mathbf{u}}
 \newcommand{\nn}{\mathbf{n}}
-
+\newcommand{\zero}{\mathbf{0}}
 
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
@@ -98,6 +99,7 @@
 
 
 \newcommand{\muu}{\boldsymbol{\mu}}
+\newcommand{\etaa}{\boldsymbol{\eta}}
 \newcommand{\alphaa}{\boldsymbol{\alpha}}
 \newcommand{\thetaa}{\boldsymbol{\theta}}
 \newcommand{\betaa}{\boldsymbol{\beta}}
