draft of ch6 done

--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -104,6 +104,7 @@
 \newcommand{\thetaa}{\boldsymbol{\theta}}
 \newcommand{\betaa}{\boldsymbol{\beta}}
 \newcommand{\lambdaa}{\boldsymbol{\lambda}}
+\newcommand{\sigmaa}{\boldsymbol{\sigma}}
 
 
 \newcommand{\note}[2]{\begin{tcolorbox}[colback=gray!5!white,
