began binary chapter

--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -82,6 +82,7 @@
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
 \newcommand{\Xt}{\mathbfcal{X}}
+\newcommand{\Mt}{\mathbfcal{M}}
 \newcommand{\Ct}{\mathbfcal{C}}
 \newcommand{\Yt}{\mathbfcal{Y}}
 \newcommand{\Ft}{\mathbfcal{F}}
