--- a/Thesis.cls
+++ b/Thesis.cls
@@ -315,10 +315,10 @@
 
 %-------------------------------------------------
 
-{
-  \vfil\vfil\vfil\null
-  \cleardoublepage
-}
+% {
+%   \vfil\vfil\vfil\null
+%   \cleardoublepage
+% }
 \addtocounter{secnumdepth}{1}
 \setcounter{tocdepth}{6}
 \newcounter{dummy}
