--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -113,6 +113,13 @@
  year = {2008}
 }
 
+@misc{Burrus2012,
+ author = {Burrus, C. Sidney},
+ organization = {OpenStax-CNX},
+ title = {Iterative Reweighted Least Squares},
+ year = {2012}
+}
+
 @inbook{Cammoun2009,
  address = {London},
  author = {Cammoun, L.
@@ -164,6 +171,19 @@ and Li, Xuelong},
  url = {https://doi.org/10.1090/S0025-5718-1965-0178586-1},
  volume = {19},
  year = {1965}
+}
+
+@article{Daubechies2010,
+ author = {Daubechies, Ingrid and DeVore, Ronald and Fornasier, Massimo and Güntürk, C. Si̇nan},
+ doi = {https://doi.org/10.1002/cpa.20303},
+ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/cpa.20303},
+ journal = {Communications on Pure and Applied Mathematics},
+ number = {1},
+ pages = {1-38},
+ title = {Iteratively reweighted least squares minimization for sparse recovery},
+ url = {https://doi.org/https://doi.org/10.1002/cpa.20303},
+ volume = {63},
+ year = {2010}
 }
 
 @article{DeBoor1979,
@@ -241,6 +261,18 @@ and Li, Xuelong},
  title = {Practical Methods of Optimization},
  url = {https://doi.org/10.1002/9781118723203},
  year = {2013}
+}
+
+@article{Gorodnitsky1997,
+ author = {Gorodnitsky, I.F. and Rao, B.D.},
+ doi = {10.1109/78.558475},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {3},
+ pages = {600-616},
+ title = {Sparse signal reconstruction from limited data using FOCUSS: a re-weighted minimum norm algorithm},
+ url = {https://doi.org/10.1109/78.558475},
+ volume = {45},
+ year = {1997}
 }
 
 @article{Granata1992,
@@ -587,6 +619,29 @@ https://doi.org/10.1137/07070111X},
  title = {Graph Spectra for Complex Networks},
  url = {https://doi.org/10.1017/CBO9780511921681},
  year = {2010}
+}
+
+@book{Murphy2012,
+ address = {Cambridge, MA},
+ author = {Murphy, Kevin P},
+ isbn = {9780262018029},
+ publisher = {MIT Press},
+ title = {Machine learning: a probabilistic perspective},
+ year = {2012}
+}
+
+@article{Nelder1972,
+ author = {Nelder, J. A. and Wedderburn, R. W. M. },
+ issn = {00359238},
+ journal = {Journal of the Royal Statistical Society. Series A (General)},
+ number = {3},
+ pages = {370--384},
+ publisher = {[Royal Statistical Society, Wiley]},
+ title = {Generalized Linear Models},
+ url = {http://www.jstor.org/stable/2344614},
+ urldate = {2023-06-05},
+ volume = {135},
+ year = {1972}
 }
 
 @book{Newman2018,
