--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -78,6 +78,7 @@
 \newcommand{\uu}{\mathbf{u}}
 \newcommand{\nn}{\mathbf{n}}
 \newcommand{\zero}{\mathbf{0}}
+\newcommand{\one}{\mathbf{1}}
 
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
