--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -113,6 +113,16 @@
  year = {2008}
 }
 
+@book{Burden2010,
+ author = {Burden, R.L. and Faires, J.D.},
+ isbn = {9780538733519},
+ lccn = {2010922639},
+ publisher = {Cengage Learning},
+ title = {Numerical Analysis},
+ url = {https://books.google.co.uk/books?id=zXnSxY9G2JgC},
+ year = {2010}
+}
+
 @misc{Burrus2012,
  author = {Burrus, C. Sidney},
  organization = {OpenStax-CNX},
