draft of multiclass reconstruction

--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -14,6 +14,9 @@
 \newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}\left(#1\right)}
 \newcommand{\tr}[1]{\text{\textup{tr}}\left(#1\right)}
 
+\newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
+
+
 
 \newcommand{\aand}{\quad \text{and} \quad}
 \newcommand{\orr}{\quad \text{or} \quad}
