--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -140,13 +140,13 @@ and Acar, B.
 and Rodriguez-Florido, M.A.
 and Brun, A.
 and Knutsson, H.
-and Thiran, J. P.},
- booktitle = {Tensors in Image Processing and Computer Vision},
- doi = {10.1007/978-1-84882-299-3_1},
- editor = {Aja-Fern{\'a}ndez, Santiago
+and Thiran, J. P.
+and Aja-Fern{\'a}ndez, Santiago
 and de Luis Garc{\'i}a, Rodrigo
 and Tao, Dacheng
 and Li, Xuelong},
+ booktitle = {Tensors in Image Processing and Computer Vision},
+ doi = {10.1007/978-1-84882-299-3_1},
  isbn = {978-1-84882-299-3},
  pages = {1--32},
  publisher = {Springer London},
@@ -232,7 +232,8 @@ and Li, Xuelong},
 @phdthesis{Elman1982,
  author = {Elman, Howard C.},
  title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
- year = {1982}
+ year = {1982},
+ school = {Yale University},
 }
 
 @article{Fackler2019,
@@ -271,6 +272,16 @@ and Li, Xuelong},
  title = {Practical Methods of Optimization},
  url = {https://doi.org/10.1002/9781118723203},
  year = {2013}
+}
+
+@article{Gerschgorin1931,
+ author = {Gerschgorin, S.},
+ journal = {Izvestija Akademii Nauk SSSR, Serija Matematika},
+ number = {3},
+ pages = {749--754},
+ title = {Uber die Abgrenzung der Eigenwerte einer Matrix},
+ volume = {7},
+ year = {1931}
 }
 
 @article{Gorodnitsky1997,
@@ -432,6 +443,15 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1109/TSP.2016.2614793},
  volume = {65},
  year = {2017}
+}
+
+@misc{Isufi2022,
+ archiveprefix = {arXiv},
+ author = {Isufi, Elvin and Gama, Fernando and Shuman, David I. and Segarra, Santiago},
+ eprint = {2211.08854},
+ primaryclass = {eess.SP},
+ title = {Graph Filters for Signal Processing and Machine Learning on Graphs},
+ year = {2022}
 }
 
 @article{Ji2019,
@@ -724,6 +744,18 @@ https://doi.org/10.1137/07070111X},
  year = {2017}
 }
 
+@article{Ramirez2021,
+ author = {Ramirez, David and Marques, Antonio G. and Segarra, Santiago},
+ doi = {https://doi.org/10.1016/j.sigpro.2021.108180},
+ issn = {0165-1684},
+ journal = {Signal Processing},
+ pages = {108180},
+ title = {Graph-signal Reconstruction and Blind Deconvolution for Structured Inputs},
+ url = {https://doi.org/https://doi.org/10.1016/j.sigpro.2021.108180},
+ volume = {188},
+ year = {2021}
+}
+
 @book{Rao1990,
  author = {Rao, K.R. and Yip, P.},
  doi = {10.1016/C2009-0-22279-3},
@@ -888,9 +920,8 @@ https://doi.org/10.1137/07070111X},
 
 @book{Tolimieri2013,
  address = {New York, NY},
- author = {Tolimieri, Richard and An, Myoung and Lu, Chao},
+ author = {Tolimieri, Richard and An, Myoung and Lu, Chao and Burrus, C S},
  edition = {1989},
- editor = {Burrus, C S},
  language = {en},
  month = {June},
  publisher = {Springer},
