--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -70,6 +70,7 @@
 \newcommand{\bb}{\mathbf{b}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\f}{\mathbf{f}}
+\newcommand{\m}{\mathbf{m}}
 \newcommand{\rr}{\mathbf{r}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\z}{\mathbf{z}}
