--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -130,6 +130,13 @@
  year = {2012}
 }
 
+@misc{CALFIRE2023,
+ author = {CALFIRE},
+ howpublished = {\url{https://www.fire.ca.gov/incidents}},
+ title = {The Department of Forestry and Fire Protection: Incident Data},
+ year = {2023}
+}
+
 @inbook{Cammoun2009,
  address = {London},
  author = {Cammoun, L.
@@ -231,9 +238,17 @@ and Li, Xuelong},
 
 @phdthesis{Elman1982,
  author = {Elman, Howard C.},
- title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
- year = {1982},
  school = {Yale University},
+ title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
+ year = {1982}
+}
+
+@misc{EPA2023,
+ author = {EPA},
+ howpublished = {\url{https://www.epa.gov/outdoor-air-quality-data}},
+ note = {Accessed: April 10, 2023},
+ title = {US Environmental Protection Agency: Air Quality System Data Mart},
+ year = {2023}
 }
 
 @article{Fackler2019,
@@ -272,6 +287,22 @@ and Li, Xuelong},
  title = {Practical Methods of Optimization},
  url = {https://doi.org/10.1002/9781118723203},
  year = {2013}
+}
+
+@inproceedings{Fortune1986,
+ address = {New York, NY, USA},
+ author = {Fortune, S},
+ booktitle = {Proceedings of the Second Annual Symposium on Computational Geometry},
+ doi = {10.1145/10515.10549},
+ isbn = {0897911946},
+ location = {Yorktown Heights, New York, USA},
+ numpages = {10},
+ pages = {313–322},
+ publisher = {Association for Computing Machinery},
+ series = {SCG '86},
+ title = {A Sweepline Algorithm for Voronoi Diagrams},
+ url = {https://doi.org/10.1145/10515.10549},
+ year = {1986}
 }
 
 @article{Gerschgorin1931,
@@ -452,6 +483,19 @@ Travis E. Oliphant},
  primaryclass = {eess.SP},
  title = {Graph Filters for Signal Processing and Machine Learning on Graphs},
  year = {2022}
+}
+
+@article{Jaffe2020,
+ author = {Jaffe, Daniel A. and O'Neill, Susan M. and Larkin, Narasimhan K. and Holder, Amara L. and Peterson, David L. and Halofsky, Jessica E. and Rappold, Ana G.},
+ doi = {10.1080/10962247.2020.1749731},
+ journal = {Journal of the Air \& Waste Management Association},
+ number = {6},
+ pages = {583-615},
+ publisher = {Taylor & Francis},
+ title = {Wildfire and prescribed burning impacts on air quality in the United States},
+ url = {https://doi.org/10.1080/10962247.2020.1749731},
+ volume = {70},
+ year = {2020}
 }
 
 @article{Ji2019,
