--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -34,6 +34,21 @@
  year = {2023}
 }
 
+@article{Atchinson1980,
+ author = {Atchinson, J. and Shen, S.M.},
+ doi = {10.1093/biomet/67.2.261},
+ eprint = {https://academic.oup.com/biomet/article-pdf/67/2/261/6690145/67-2-261.pdf},
+ issn = {0006-3444},
+ journal = {Biometrika},
+ month = {08},
+ number = {2},
+ pages = {261-272},
+ title = {{Logistic-normal distributions:Some properties and uses}},
+ url = {https://doi.org/10.1093/biomet/67.2.261},
+ volume = {67},
+ year = {1980}
+}
+
 @book{Aubert2006,
  address = {New York, NY},
  author = {Aubert, Gilles and Kornprobst, Pierre},
@@ -177,6 +192,22 @@ and Li, Xuelong},
  urldate = {2022-11-21},
  volume = {32},
  year = {2015}
+}
+
+@article{Cleland2020,
+ author = {Cleland, Stephanie E and West, J Jason and Jia, Yiqin and Reid,
+Stephen and Raffuse, Sean and O'Neill, Susan and Serre, Marc L},
+ journal = {Environ. Sci. Technol.},
+ language = {en},
+ month = {November},
+ number = {21},
+ pages = {13439--13447},
+ publisher = {American Chemical Society (ACS)},
+ title = {Estimating wildfire smoke concentrations during the October 2017
+California fires through {BME} space/time data fusion of
+observed, modeled, and satellite-derived {PM2.5}},
+ volume = {54},
+ year = {2020}
 }
 
 @article{Cooley1965,
@@ -485,6 +516,18 @@ Travis E. Oliphant},
  year = {2022}
 }
 
+@article{Jablonski2017,
+ author = {Jablonski, Ireneusz},
+ doi = {10.1109/JSEN.2017.2733767},
+ journal = {IEEE Sensors Journal},
+ number = {23},
+ pages = {7659-7666},
+ title = {Graph Signal Processing in Applications to Sensor Networks, Smart Grids, and Smart Cities},
+ url = {https://doi.org/10.1109/JSEN.2017.2733767},
+ volume = {17},
+ year = {2017}
+}
+
 @article{Jaffe2020,
  author = {Jaffe, Daniel A. and O'Neill, Susan M. and Larkin, Narasimhan K. and Holder, Amara L. and Peterson, David L. and Halofsky, Jessica E. and Rappold, Ana G.},
  doi = {10.1080/10962247.2020.1749731},
@@ -563,6 +606,15 @@ https://doi.org/10.1137/07070111X},
  year = {2009}
 }
 
+@inproceedings{Kondor2002,
+ author = {Kondor, Risi Imre and Lafferty, John},
+ booktitle = {Proceedings of the 19th international conference on machine learning},
+ pages = {315--322},
+ title = {Diffusion kernels on graphs and other discrete structures},
+ volume = {2002},
+ year = {2002}
+}
+
 @book{Kroonenberg2008,
  address = {Hoboken, NJ},
  author = {Kroonenberg, Pieter M},
@@ -627,6 +679,18 @@ https://doi.org/10.1137/07070111X},
  url = {https://doi.org/10.1214/18-AOAS1205},
  volume = {13},
  year = {2019}
+}
+
+@article{Li2023,
+ author = {Li, Rui and Yuan, Xin and Radfar, Mohsen and Marendy, Peter and Ni, Wei and O’Brien, Terrence J. and Casillas-Espinosa, Pablo M.},
+ doi = {10.1109/RBME.2021.3122522},
+ journal = {IEEE Reviews in Biomedical Engineering},
+ number = {},
+ pages = {109-135},
+ title = {Graph Signal Processing, Graph Neural Network and Graph Learning on Biological Data: A Systematic Review},
+ url = {https://doi.org/10.1109/RBME.2021.3122522},
+ volume = {16},
+ year = {2023}
 }
 
 @book{Little2019,
@@ -920,6 +984,20 @@ https://doi.org/10.1137/07070111X},
  year = {1995}
 }
 
+@inproceedings{Smola2003,
+ address = {Berlin, Heidelberg},
+ author = {Smola, Alexander J.
+and Kondor, Risi},
+ booktitle = {Learning Theory and Kernel Machines},
+ editor = {Sch{\"o}lkopf, Bernhard
+and Warmuth, Manfred K.},
+ isbn = {978-3-540-45167-9},
+ pages = {144--158},
+ publisher = {Springer Berlin Heidelberg},
+ title = {Kernels and Regularization on Graphs},
+ year = {2003}
+}
+
 @article{Stanley2020,
  author = {Stanley, Jay S. and Chi, Eric C. and Mishne, Gal},
  doi = {10.1109/MSP.2020.3013555},
@@ -974,6 +1052,18 @@ https://doi.org/10.1137/07070111X},
  year = {2013}
 }
 
+@inproceedings{Tran2020,
+ author = {Tran, Nguyen and Ambos, Henrik and Jung, Alexander},
+ booktitle = {ICASSP 2020 - 2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP40776.2020.9054408},
+ number = {},
+ pages = {3832-3836},
+ title = {Classifying Partially Labeled Networked Data VIA Logistic Network Lasso},
+ url = {https://doi.org/10.1109/ICASSP40776.2020.9054408},
+ volume = {},
+ year = {2020}
+}
+
 @article{Venkitaraman2019,
  author = {Venkitaraman, Arun and Chatterjee, Saikat and Händel, Peter},
  doi = {10.1109/TSIPN.2019.2936358},
@@ -1008,6 +1098,20 @@ https://doi.org/10.1137/07070111X},
  url = {https://doi.org/10.1137/20M1371026},
  volume = {64},
  year = {2022}
+}
+
+@article{Zhang2017,
+ author = {Zhang, Zhi-Wu and Jing, Xiao-Yuan and Wang, Tie-Jian},
+ journal = {Autom. Softw. Eng.},
+ language = {en},
+ month = {March},
+ number = {1},
+ pages = {47--69},
+ publisher = {Springer Science and Business Media LLC},
+ title = {Label propagation based semi-supervised learning for software
+defect prediction},
+ volume = {24},
+ year = {2017}
 }
 
 @inproceedings{Zhang2018,
@@ -1047,4 +1151,17 @@ multilayer complex systems},
  url = {https://doi.org/10.1109/TKDE.2022.3142179},
  volume = {35},
  year = {2023}
+}
+
+@inproceedings{Zhu2003,
+ author = {Zhu, Xiaojin and Ghahramani, Zoubin and Lafferty, John},
+ booktitle = {Proceedings of the Twentieth International Conference on International Conference on Machine Learning},
+ isbn = {1577351894},
+ location = {Washington, DC, USA},
+ numpages = {8},
+ pages = {912–919},
+ publisher = {AAAI Press},
+ series = {ICML'03},
+ title = {Semi-Supervised Learning Using Gaussian Fields and Harmonic Functions},
+ year = {2003}
 }
