updates to binary chapter

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -299,6 +299,17 @@ observed, modeled, and satellite-derived {PM2.5}},
  year = {2019}
 }
 
+@book{Fan2020,
+ author = {Fan, J. and Li, R. and Zhang, C.H. and Zou, H.},
+ doi = {10.1201/9780429096280},
+ isbn = {9781466510852},
+ publisher = {CRC Press},
+ series = {Chapman \& Hall/CRC Data Science Series},
+ title = {Statistical Foundations of Data Science},
+ url = {https://doi.org/10.1201/9780429096280},
+ year = {2020}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
