updated binary chapter

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -373,7 +373,7 @@ In each of these expressions we have a fraction for which both the numerator and
 \begin{theorem}
     \label{the:gradient_and_hesian}
 
-    Consider the following function, $\xi(\f)$, which maps a vector $\f \in R^N$ to a scalar. 
+    Consider the following function, $\xi(\f)$, which maps a vector $\f \in \R^N$ to a scalar. 
 
     \begin{equation}
         \xi(\f) = -\s^\top \big(\y \circ \log \muu(\f) + \left(\one  - \y\right) \circ \log \left(\one - \muu(\f) \right)\big) + \frac{\gamma}{2} \f^\top \HH^{-2} \f
