--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -963,6 +963,17 @@ https://doi.org/10.1137/07070111X},
  year = {2016}
 }
 
+@book{Scholkopf2018,
+ author = {Scholkopf, Bernhard and Smola, Alexander J.},
+ doi = {10.7551/mitpress/4175.001.0001},
+ isbn = {9780262256933},
+ month = {06},
+ publisher = {The MIT Press},
+ title = {{Learning with Kernels: Support Vector Machines, Regularization, Optimization, and Beyond}},
+ url = {https://doi.org/10.7551/mitpress/4175.001.0001},
+ year = {2018}
+}
+
 @article{Shuman2013,
  author = {Shuman, David I and Narang, Sunil K. and Frossard, Pascal and Ortega, Antonio and Vandergheynst, Pierre},
  doi = {10.1109/MSP.2012.2235192},
