--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -87,6 +87,7 @@
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
 \newcommand{\Xt}{\mathbfcal{X}}
+\newcommand{\Bt}{\mathbfcal{B}}
 \newcommand{\Mt}{\mathbfcal{M}}
 \newcommand{\Ct}{\mathbfcal{C}}
 \newcommand{\Yt}{\mathbfcal{Y}}
