finished first pass of ch6

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -83,6 +83,15 @@
  year = {2018}
 }
 
+@misc{Baumgardner2015,
+ author = {Baumgardner, Marion F. and Biehl, Larry L. and Landgrebe, David A.},
+ doi = {doi:/10.4231/R7RX991C},
+ month = {Sep},
+ title = {220 Band AVIRIS Hyperspectral Image Data Set: June 12, 1992 Indian Pine Test Site 3},
+ url = {https://doi.org/doi:/10.4231/R7RX991C},
+ year = {2015}
+}
+
 @article{Bekas2007,
  author = {Bekas, C. and Kokiopoulou, E. and Saad, Y.},
  doi = {https://doi.org/10.1016/j.apnum.2007.01.003},
@@ -590,6 +599,18 @@ Travis E. Oliphant},
  year = {1995}
 }
 
+@book{Kelley2003,
+ address = {},
+ author = {Kelley, C. T.},
+ doi = {10.1137/1.9780898718898},
+ edition = {},
+ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898718898},
+ publisher = {Society for Industrial and Applied Mathematics},
+ title = {Solving Nonlinear Equations with Newton's Method},
+ url = {https://doi.org/10.1137/1.9780898718898},
+ year = {2003}
+}
+
 @article{Kiers2000,
  author = {Kiers, Henk A. L.},
  doi = {https://doi.org/10.1002/1099-128X(200005/06)14:3<105::AID-CEM582>3.0.CO;2-I},
@@ -748,6 +769,18 @@ https://doi.org/10.1137/07070111X},
  year = {1980}
 }
 
+@inproceedings{Martin2001,
+ author = {Martin, D. and Fowlkes, C. and Tal, D. and Malik, J.},
+ booktitle = {Proc. 8th Int'l Conf. Computer Vision},
+ month = {July},
+ pages = {416--423},
+ title = {A Database of Human Segmented Natural Images and its
+Application to Evaluating Segmentation Algorithms and
+Measuring Ecological Statistics},
+ volume = {2},
+ year = {2001}
+}
+
 @article{Miao2022,
  author = {Miao, Xiaoyu and Jiang, Aimin and Zhu, Yanping and Kwan, Hon Keung},
  doi = {10.1016/j.sigpro.2022.108708},
@@ -768,6 +801,18 @@ https://doi.org/10.1137/07070111X},
  title = {Graph Spectra for Complex Networks},
  url = {https://doi.org/10.1017/CBO9780511921681},
  year = {2010}
+}
+
+@article{Minaee2022,
+ author = {Minaee, Shervin and Boykov, Yuri and Porikli, Fatih and Plaza, Antonio and Kehtarnavaz, Nasser and Terzopoulos, Demetri},
+ doi = {10.1109/TPAMI.2021.3059968},
+ journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+ number = {7},
+ pages = {3523-3542},
+ title = {Image Segmentation Using Deep Learning: A Survey},
+ url = {https://doi.org/10.1109/TPAMI.2021.3059968},
+ volume = {44},
+ year = {2022}
 }
 
 @book{Murphy2012,
@@ -1119,6 +1164,19 @@ and Warmuth, Manfred K.},
  title = {High-Dimensional Gaussian Sampling: A Review and a Unifying Approach Based on a Stochastic Proximal Point Algorithm},
  url = {https://doi.org/10.1137/20M1371026},
  volume = {64},
+ year = {2022}
+}
+
+@article{Wang2022,
+ author = {Wang, Yuanbo and Ahsan, Unaiza and Li, Hanyan and Hagen, Matthew },
+ doi = {10.1561/0600000097},
+ issn = {1572-2740},
+ journal = {Foundations and Trends in Computer Graphics and Vision},
+ number = {2-3},
+ pages = {111-283},
+ title = {A Comprehensive Review of Modern Object Segmentation Approaches},
+ url = {https://doi.org/10.1561/0600000097},
+ volume = {13},
  year = {2022}
 }
 
