--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -896,6 +896,20 @@ Measuring Ecological Statistics},
  year = {1973}
 }
 
+@article{Peters2022,
+ author = {Peters, Gareth and Zhu, Rui and Tzougas, George and Rabitti,
+Giovanni and Yusuf, Ismaila},
+ doi = {10.2139/ssrn.4299196},
+ journal = {SSRN Electron. J.},
+ language = {en},
+ publisher = {Elsevier BV},
+ title = {The role and significance of green bonds in funding transition
+to a low carbon economy: A case study forecasting portfolios of
+green bond instrument returns},
+ url = {https://doi.org/10.2139/ssrn.4299196},
+ year = {2022}
+}
+
 @article{Qiu2017,
  author = {Qiu, Kai and Mao, Xianghui and Shen, Xinyue and Wang, Xiaohan and Li, Tiejian and Gu, Yuantao},
  doi = {10.1109/JSTSP.2017.2726969},
