--- a/Front & Back Matter/quotation.tex
+++ b/Front & Back Matter/quotation.tex
@@ -2,10 +2,10 @@
 
 \null\vfill % Add some space to move the quote down the page a bit
 
-\textit{``Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism."}
+\textit{``Doubt is not a pleasant condition, but certainty is absurd."}
 
 \begin{flushright}
-Dave Barry
+Voltaire
 \end{flushright}
 
 \vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
